# libfileio

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.git  README.md  configure.in
src/: Makefile.am  fileio.cpp  fileio.h  location_linux.cpp  location_win32.cpp  posixfile.cpp  posixfile.h
tests/: fileio_location_test.cpp  fileio_test.cpp
