AC_INIT(configure.in)

# libtool versioning
LT_RELEASE=1
LT_CURRENT=1
LT_REVISION=0
LT_AGE=0

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(libfileio, 1.0.0)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

# Checks for header files.
AC_CHECK_HEADERS([string boost/shared_ptr.hpp boost/function.hpp vector map stdint.h sys/types.h sys/stat.h ])
AC_CHECK_HEADERS([fcntl.h errno.h unistd.h])

case "$target" in
    *-*-cygwin* | *-*-mingw32*)
    AC_CHECK_HEADERS([windows.h])
    ;;
    *-*-linux-gnu*)
    AC_CHECK_HEADERS([sys/mman.h])
    ;;
esac


AC_OUTPUT(Makefile \
	src/Makefile)